--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://aws-test.cilpbkfpr6xs.ap-south-1.rds.amazonaws.com:3306/TestDB
-spring.datasource.username=root
-spring.datasource.password=Admin000
+spring.datasource.url=jdbc:mysql://your-aws-instance-name.cilpbkfpr6xs.ap-south-1.rds.amazonaws.com:3306/Your-DB-Name
+spring.datasource.username=Your-Instance-username
+spring.datasource.password=Your-Instance-password
 spring.jpa.show-sql=true
