--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,9 +3,9 @@
 
 #spring:
  # datasource:
-  #  url: aws-test.cilpbkfpr6xs.ap-south-1.rds.amazonaws.com/TestDB
-   # username: root
-   # password: Admin000
+  #  url: your-aws-instance-name.cilpbkfpr6xs.ap-south-1.rds.amazonaws.com/Your-DB-Name
+   # username: your-instance-username
+   # password: your-instance-password
   #jpa: 
    #   hibernate.ddl-auto: update
     #  generate-dll: true
